public interface Solicitud {
  public void aplicarEn(Guardarropa guardarropa);
  public void revertirAplicacion(Guardarropa guardarropa);
}
