public class Usuario{
 public String nombre;
 public String apellido;
 public Usuario(String nombre,String apellido){
  this.nombre=nombre;
  this.apellido = apellido;
 }
 public String getNombre() {
  return this.nombre;
 }

}
